--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block title %}
-    <meta name="description" content="Free Web tutorials">
-
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-
-    <meta name="author" content="John Doe">
+    <meta name="description" content="Use the Mask! - application">
     <title>Wear the Mask! - Instructions</title>
     {{ turbo() }}
 {% endblock %}
