--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Machine Learning, Deep Learning, Rolando Jesús Duarte Mejías, portfolio, mask">
+    <meta name="author" content="Rolando Jesús Duarte Mejías">
     <link rel="stylesheet" href='{{ url_for("static", filename = "./css/style.css") }}'>
     {% block title %}
     {% endblock %}
