Fixxing Camera: Client webcam

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,6 +24,8 @@
             </div>
         </div>
     </div>
+    {% block script %}
+    {% endblock %}
 </body>
 <footer>
     {% block portfolio %}
@@ -32,4 +34,5 @@
     <h3>Face detection by OpenCV, 2000</h3>
     <h3>CNN model and webpage by Rolando Jesús Duarte Mejías, 2021</h3>
 </footer>
+
 </html>
