--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: cursive;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 html{
@@ -52,10 +52,21 @@ html{
     justify-content: space-around;
 }
 
+#camera video{
+    width: 0vw;
+    height: 0%;
+    border-radius: 100vmax;
+}
+
 #camera img{
     width: 30vw;
-    height: 350%;
-    border-radius: 100vmax;
+    height: 75%;
+
+}
+
+#camera canvas{
+    width: 0vw;
+    height: 0%;
 }
 
 #camera a{
