--- a/templates/app.html
+++ b/templates/app.html
@@ -3,14 +3,72 @@
 {% block title %}
     <meta name="description" content="Use the Mask! - Instructions">
     <title>Wear the Mask! - App</title>
-    {{ turbo() }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.0/socket.io.js'></script>
 {% endblock %}
 
 {% block camera %}
-    {% include "probabilities.html" %}
-    <img src="{{ url_for('video_feed') }}" alt="Wear the mask - Stream">
+    <div id="load" class="load">
+        <h2 id="condition"></h2>
+        <h3 id="probability" class="yellow"></h3>
+    </div>
+    <video autoplay playsinline  id="videoElement"></video>
+    <canvas id="canvasElement" width="480" height="480"></canvas>
+    <img id="photo" alt="Wear the mask - Stream"  width="480" height="480">
 {% endblock %}
 
 {% block portfolio %}
     <h2><a href="#">Go to portfolio</a></h2>
+{% endblock %}
+
+{% block script %}
+    <script>
+        
+        var socket = io.connect(window.location.protocol + '//' + document.domain + ':' + location.port);
+        socket.on('connect', function(){
+            console.log("Connected...!", socket.connected)
+        });
+
+
+        var canvas = document.getElementById('canvasElement');
+        var context = canvas.getContext('2d');
+        const video = document.querySelector("#videoElement");
+
+        video.width = 480;
+        video.height = 480; 
+
+
+        if (navigator.mediaDevices.getUserMedia) {
+            navigator.mediaDevices.getUserMedia({ video: true })
+            .then(function (stream) {
+                video.srcObject = stream;
+                video.play();
+            })
+            .catch(function (err0r) {
+
+            });
+        }
+
+
+        const FPS = 6;
+        setInterval(() => {
+            width=video.width;
+            height=video.height;
+            context.drawImage(video, 0, 0, width , height);
+            var data = canvas.toDataURL('image/jpeg', 0.5);
+            context.clearRect(0, 0, width,height );
+            socket.emit('image', data);
+        }, 1000/FPS);
+
+        socket.on('response_back', function(data){
+                photo.setAttribute('src', data.image );
+
+                $('#condition').text(data.condition);
+                $('#condition').show();  
+                
+                $('#probability').text(data.probability);
+                $('#probability').show(); 
+                });
+
+    </script>
 {% endblock %}
