--- a/templates/app.html
+++ b/templates/app.html
@@ -15,13 +15,13 @@
     <div>
         <video autoplay playsinline  id="videoElement"></video>
         <canvas id="canvasElement" width="480" height="480"></canvas>
-        <img id="photo" alt="Wear the mask - Stream"  width="480" height="480">
+        <img id="photo" alt="Wait a momment..."  width="480" height="480">
     </div>
     
 {% endblock %}
 
 {% block portfolio %}
-    <h2><a href="#">Go to portfolio</a></h2>
+    <h2><a href="https://rolandoduarte.herokuapp.com/">Go to portfolio</a></h2>
 {% endblock %}
 
 {% block script %}
