--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Give permission to the app to use the camera.</li>
         <li>Use the app in a well-lit environment.</li>
-        <li>Stay in front of the camera until the green square appears around your face.</li>
+        <li>Stay in front of the camera until the black square appears around your face.</li>
         <li>Try the app when you have a mask on your face and when you do not.
             (Recommendation: When you have the mask, the app may not detect your face, try to wear 
             the mask in a different way).
