--- a/templates/app.html
+++ b/templates/app.html
@@ -59,20 +59,12 @@
             height=video.height;
             context.drawImage(video, 0, 0, width , height);
             var data = canvas.toDataURL('image/jpeg', 0.5);
-            //context.clearRect(0, 0, width,height );
+            context.clearRect(0, 0, width,height );
             socket.emit('image', data);
         }, 1000/FPS);
 
         socket.on('response_back', function(data){
                 photo.setAttribute('src', data.image);
-                /*
-                $('#condition').text(data.condition);
-                $('#condition').show();  
-                
-                $('#probability').text(data.probability);
-                $('#probability').attr("class", data.css_class);
-                $('#probability').show(); 
-                */
                 });
 
     </script>
