--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,15 +68,15 @@ html{
 }
 
 #camera img{
-    width: 30vw;
-    height: 50vh;
+    width: 40vw;
+    height: 60vh;
     border-radius: 100vmax;
 }
 
 #camera canvas{
-    width: 30vw;
-    height: 50vh;
-    border-radius: 100vmax;
+    display: none;
+    width: 0vw;
+    height: 0vh;
 }
 
 #camera a{
@@ -137,13 +137,8 @@ footer a:hover{
     }
     
     #camera img{
-        width: 50vw;
-        height: 40vh;
-    }
-
-    #camera canvas{
-        width: 50vw;
-        height: 40vh;
+        width: 90vw;
+        height: 50vh;
     }
 
     ul{
